Refactorizando para crear módulos, construimos API Rest para consumir desde flight-web